--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -128,6 +128,7 @@
 				"Detail": {
 					"viewType": "XML",
 					"viewName": "Detail",
+					"viewId": "detailView",
 					"routerClass": "sap.m.routing.Router",
 					"async": true,
 					"viewPath": "comm.espedia.TestOdata.view",
